@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX R-2.11.1-parallel.patch 685 SHA256 5e57374318a3f549fa64c939a45964b941fac1f9b021cdc94ff1d40ff23032c5 SHA512 30491365eee00389f6f09c2093b5b5a568f4567c110cc0cb3332a53d6a7fcd87fe8f46f9f8521cf21bf1f0cfa24f4282a6e22396902f454c43f26542ac22c2a9 WHIRLPOOL 266115362f92a57d7a22d7b8810d12641e44c61b8396a8fd1a7fde2f5655a4990950366fc801d1d621e045a5a0b44d34c982cddb11396e82c019bec386a65f2a
 AUX R-2.12.1-ldflags.patch 639 SHA256 dee11fd510d31add8166230a7af61b7e700f2f4f122cbe0a07310d0017874933 SHA512 49b73cff79c1521e214f036390f32eed8c7d4afd39082eabb7e6c59e5d7136f399ff7227117e418d4445647d25259dce8eb208a1ebe5990bf4ad87cefa250338 WHIRLPOOL 98ec264ac6d68e64dcbce32f4688aa458ba6d300202b6f31cd7580de68c693f0fb6aecba40cd0f6736a0ef9ff346d04cd96af06716a25c4a84a72551085837ed
@@ -12,29 +12,29 @@ DIST R-3.0.3.tar.gz 28075821 SHA256 b97cfd9540f294ab786e846153f3dd8605610d7e2761
 DIST R-3.1.0.tar.gz 28469975 SHA256 8a680390f84c58c01dcdefd682eaa0e90389f09e6d2f2e090c71af40065f5fe2 SHA512 bb21fc90c7d37a5328031ed784e7dcbd20259d1837c33db3b51c14a116939a53496683d5de142a1223e89fc12406294efc67bed3595131615e9607d5ffab5ce2 WHIRLPOOL b376180d700d18780eb344b737a3a1bfc8b40f67967032e0f34abf940d76c3ffd7694be9f2f10be985571e8f94d92a6970a3d1cba503280e3fcf6df7a5e4298e
 DIST R-3.1.1.tar.gz 28606569 SHA256 ce5c4d5e34414ce8f1ec2d5642861435fa1ddc4cd89bd336172bbe25a62c7a19 SHA512 a75d8b82645bd9486873669b802924448d591013076e3d7dc958502dc6f0dac7d7fb78f3921d34a1eac1383f141b6e800f4293f7fac09651e0176cf84c431af9 WHIRLPOOL ec05c70193a229cbaf15f3432853070c6666c3963a4e2719a6d8ff188bfc2cada0d1f2fe90a9dd6b43f46913138afed0be387ba73b7f9c4d87abc362cc8a5393
 DIST R-3.1.2.tar.gz 28655941 SHA256 bcd150afcae0e02f6efb5f35a6ab72432be82e849ec52ce0bb89d8c342a8fa7a SHA512 fee20cd94d14bd46cc36fb265ed4d64f44eaa3929dd13c62d29a5883fde607aba63e28a4b0f265ede63f78788996deaee36acf6a70cc0bc90a705c9782be01a1 WHIRLPOOL f02d543c0fd7e89e63aba844b7c0f651a9a6bb5dbfcd58bdb64b49d08335c3270383eb62291b9f2f20ef6ec9f39eef5cf77ae1af3109296f8b1898227cca99d1
-EBUILD R-3.0.1.ebuild 6217 SHA256 318ce37358e159edca0e3cdd62ce7b6b859a8975eaf679df75e0053afe6fe9ec SHA512 9efd490f5315277997bcf806580d392d233cdde42c8aa77b58867977f064de4b96ff26b3cabd89c95eac2ef7f62af6a636c508c8d741ec82c910d32ebd93f518 WHIRLPOOL 22376f707200d1768290d381f881e183098460e63585d4f06d0f8b5178d43efc85849d75293a4264aafdd8c333f7d3639e95813cb7842aedda60c3bc23c53077
+EBUILD R-3.0.1.ebuild 6221 SHA256 c9c575adfdd95aaf2724168e46843275a7c8ef6af3902e34fff106a4d96256a0 SHA512 838f0882b2a64aac1a901909944029efbb8e8e90a94747db4cb62032a3e5567f677a05a0e8e13b81b3fdb02ff4aa2b499553b5368bc374b64e910c124dd8c203 WHIRLPOOL a6040d52e8be0a86746be022e34615e970c5fc6235fca8a1eaa20f406e059e1770f12dd6fb55346c8e362a4cffb1cec7d7ad23f6568f9709f1c24a847de39899
 EBUILD R-3.0.3.ebuild 6185 SHA256 c966118221b99f8f35c9d6e30dce5e6ee1f60c22387ae20a209c7ccd930a7f70 SHA512 d4177b848d6a6a12b8c4952a7b2dc32f8533bdffd70e60169ad5a84a2654e8a30440d49b83210fae0a44161c38de7191cbaed16d0b9cbbcf407c8bc876b6edb8 WHIRLPOOL 0d1464242fac9f68c2fd51c82042479cbdac36d84cb89bc62c557e543743fa0b1e72e9e18219050c1a7d40dc75e0081bf4d3f6c6f43f1cfb567d1b0dd8b9e483
 EBUILD R-3.1.0.ebuild 6245 SHA256 70715ced23d108bc76283268a0ad5a5ff3d26638ba4a2812053078e6c83b49d8 SHA512 11bfb21a9c766e1de3dc6cfdf5492f55e336dfa2fe1b947f491e5042d992b31c49037418dd9c294db8e417aff555a2e4108185e5cd52df2cbed2ba2481bb68ff WHIRLPOOL 6a7919073efff5bcbea3157d61d325d16fb7faa291dc59eedeca8e2dfb8fe7c26374333a394655695c647da73ca8bf78d7d59e6a883625c03d2e9d0154336d65
 EBUILD R-3.1.1.ebuild 6192 SHA256 b67e7a833ba05d1bdb13aef789311fd4e543c545adcde6663a0641f6fb78afda SHA512 5b20c1a3fb94b9146a6f743249d3a175fa0a93afbf56b2a83fd8e0fea42b61640f930f67abf2ad2ce97e02c6220dc2f0ad2ff4f901872b4e4e3c44d45fc23e61 WHIRLPOOL ee111bc06f9f7bba8552238378c00e96652a8a554f620fb69a1de18533bd827dabd7d85c1bee86392ea59d919f015c4466c5e6ebd63e89f667e5d094fee88927
 EBUILD R-3.1.2.ebuild 6193 SHA256 28fe94990662642a3df1c0f4f83906c9c86ba4eef63af91e8519db0333296185 SHA512 65912ae19b5d3e69c4feb6ffb3c3ac8938db14d0cec8591da57fadb27d8f52696e7be4da585131c4d4907649c43241806ec1207ff4c5b1cf4e0364bdf52bc43b WHIRLPOOL cac8ee2b994731f249a43ee76542619f8242510601da562e94b9535d86304c4bf34b785e0ca6ec84d3e5c174fd3967af125ae4e62fe1debf019916693b361c36
-MISC ChangeLog 36792 SHA256 b646acaf39de1b34d367d1c514db7bc07c6d6f510dc72a160abf1e064be1e320 SHA512 6dce042b4fd8215ead37f66511f3af724d47eaf117ed6d169a91dfe3ed2b852b14cb36e1682e1e8d2ebf15c688554914c72c96496f7c8b538fc520d78ede4244 WHIRLPOOL 2790852819a7a69bce8f679afaa0a857a705edb8f8c44ea4bfb0076f5b491cb47c50c56363aea443011149b0ca96a0ce80f36568754291f8d2cdaab0ed2abf94
+MISC ChangeLog 36872 SHA256 283ca2053478d13122440ede9f37b527b319115f5879cf4e2d7aeb389816dd5b SHA512 8f3fdb8cda180c9156e503571d10d7990272c1317a82c579f6640e74ac0018833c1bb55ff138222923cbffa7d0d934cfcb6a98ef46c1c0e960ffa569ac9c3090 WHIRLPOOL 6df068e6fd2f6f64d5caddd2854379a4ff7c10544a8cc31061c5276e50af9ca47c1148f9843665c77e5b18104dfb42a92d33420437afd7c25cab2a9081480ca6
 MISC metadata.xml 1136 SHA256 7d7c013a77ad6ffc785202e05711d4127a77f64fe09ef919deffa80cc74f992a SHA512 761c3afcbfc76c6026cc6a6f89dae2502f495008851dcb070ee04990653ed6785f089d31a0ea3ada11ccf3d027d372256d04a0baf9ee5d2528e63a9ea4dee313 WHIRLPOOL b7bd0d3843543ff07d15e2d18ae56358477667cec9e78be266f2d983304537afd6c1bac0842e403ce62729248debe2fddfe345c66e022bf2716a47d7819fe041
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJU1fF+XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcu7UQAJv2zw2g/BAJrXdU9ImE/Rif
-m/quj7UJTD1080V73ArVL1zKok/e8UzdANJAjRLcOewFJ0Jl5vL11t+a/IxJvrtg
-uhnWkmJbHn/KJMYLmnPb92sVN5YGnTSnjB0bl8gxoqNHhhT2+gT4Sw4Meq0btpLX
-z8yMmYdWZJQ0780vcunUMkxA4ksnsjrbaMHXRlDHI0UDM/0W9mJqgh0cPYwUbBsL
-ou1/PW6S/voOjtZ4gcM9lpne9EkL5XmzDeVjrytYghD1I9fJ+St1JNtzkGW1EAiZ
-5Wz1GKlXfdQzm9WU6SA3l/wKF9gNjP1nENIKpgCl82SWYlqdTZaFbeWj7mqXnH/G
-ZSSXELD4hSEKxo1IS/xB0jwMpS8yVGON9/Ef8ptmorZZ1yJ3UIAzPurDXV//dGeP
-U2vC/DRbC7+CzvUVYASARloG+n0+nkVzMnrKGMD6mNSeA45dKIDTmQAZSwUiDHxr
-AEFugY4E2cepPT96jemj7OOziO2/A6C8X5d+lH8yGhXis9yZyuAsvu4eF6spD+UH
-rOWSAPoT3o07B4PP7Fi/YTOnU9jMm+fP5/SyFXX7mtrOrpKXQr5adDMg81ACvTqo
-OUycjiGFnFQk2QAdDaQy89CG/JgdDyZ/gdv0ffkZexFzEF03oHz9570xIqD9D5bO
-yb08nzLsV0qDcnWTdiRA
-=lnJT
+iQJ8BAEBCgBmBQJVI57yXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirVaQQAIJNSA7jv9cK3ftCWcI3Vg3x
+3yWXGWvN0kypUb753kYlVP9exwqgMR/a1sm079LHFrSITci0IyoucWNEaFTtI4GI
+dRAN5I4+pHjpFWOxp+8V5cMDJXkjpVZjmGchB+NPhtQAjKHRtoHEBziPD5UTLIaY
+b4S6ZJM9RLv7KNl5OYjd1XB082BsL0EodJFQdcmtTNbQB+M3cphtyJB+SWBxaZse
+RLZSVJGSBx14ILg3zJfpGc6nvHKTUCd3hIE6wzQwtpZZ1ya4NUHsPYkm3zC09cL+
++EnpHMSCmxWtaRUJp8TsnnHOu43P6YkD9rzSWpgVEamMwTewfuUeKx4Hc23Qp2XE
+8s9fci6dzBMY0BDB8KVhkEft7NUxs5JPqDzOB1rNANhd9Ywnuw2Ch+/zXz04ZdKj
+pqQrDzycStvYJDONuUk+FQFXdXtpkQu9BSqXpOYfJhbtmmfM9lpfktItktzK+VaJ
+lcSu/M0qB9VDJuBph8L/oPq58ys3aDQFM6cWTsnHDwKQf+n2EYKi7uWnZbKkagTu
+eWjX5MUHvskJzAzhJ+CPq8N3qSOOxaDl76NI42VwjncZh79G9OH2BOJotXRaW9Im
+bOnY8DFyDRGwWbrFAUQnysBLUbRM95Wcs49ORa09Nt0+u1IIPDf4GDgUTuYmwCP6
+oR41jQkABoUYfHEOYpgd
+=gxUn
 -----END PGP SIGNATURE-----
