@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/R
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/ChangeLog,v 1.241 2015/02/07 11:05:26 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/ChangeLog,v 1.242 2015/04/07 09:10:10 jlec Exp $
+
+  07 Apr 2015; Justin Lecher <jlec@gentoo.org> R-3.0.1.ebuild:
+  Fix Slot operators
 
   07 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org> R-3.0.1.ebuild:
   Add slot operator on icu dependency
